Prevent doctor list image squish on mobile

--- a/assets/scss/uams-supporting/doctors-list.scss
+++ b/assets/scss/uams-supporting/doctors-list.scss
@@ -251,6 +251,7 @@
                             (max-width: ($breakpoint-xs - 1)),
                             (min-width: $breakpoint-sm) and (max-width: (930px - 1)) { // Fixed image height, auto width
                                 height:245px;
+                                width: auto;
                             }
 
                         }
